--- a/buffalo/business-card/templates/resume.html
+++ b/buffalo/business-card/templates/resume.html
@@ -1,1 +1,8 @@
-This is resume page!
+<div class="resume">
+    <p>
+        <%= t("resume-1") %>
+    </p>
+    <p>
+        <%= t("resume-2") %>
+    </p>
+</div>
